# task-based-system

./: .gitignore  CMakeLists.txt  README.md
include/commands/: command.hpp  executor.hpp  result.hpp
include/parser/: parser.hpp
include/registry/: registry.hpp
include/task/: processor.hpp
include/user/: manager.hpp  user.hpp
source/: main.cpp
source/commands/: executor.cpp
source/parsec/: CMakeLists.txt
source/parsec/interface/parsec/: parsec.hpp
source/parser/: parser.cpp
source/task/: processor.cpp
source/user/: manager.cpp
tasks/: task1.txt  task2.txt  task3.txt  task4.txt  task5.txt
tests/: test_task_processor.cpp
